# eutectic

./: Cargo.toml  README.md
docs/: architecture.md  geometry-model-convergence.md  gui-architecture.md  poc-rp2350-result.md  poc-rp2350-spec.md  renderer-spec.md
docs/log/: README.md  d01-feature-single-currency.md  d02-z-authoritative.md  d03-reserved-not-built.md  d04-connectivity-authoritative.md  d05-geometry-tracked-fold.md  d06-integer-quaternion-orient.md  d07-derived-geometry-rounded.md  d08-3d-view-first-class.md  d09-text-string-authoritative.md  d10-courtyard-polygonal-truth.md  d11-content-addressed-library-refs.md  d12-phase0-foundation.md  d13-slab-name-identity.md  d14-refdes-derived-class-registry.md  d15-paste-derived-fab-slab.md  d16-area-unified-producer.md  d17-ttf-outline-text.md  d18-routes-persisted.md  d19-punchable-planes.md  d20-schematic-derived-view.md  d21-source-language-core.md  d22-route-identity-persists.md  d23-schematic-features-tier.md  d24-ui-usability-rulings.md  d25-board-place-tool.md  m1-engine-core.md  m2-override-decay.md  m3-placement-solver.md  n01-geometry-fracture-finding.md  n02-convergence-plan.md  n03-convergence-status-ledger.md  n04-convergence-open-items.md  n05-region-kernel-record.md  n06-arc-support-record.md  n07-original-roadmap.md
docs/ui-oracle/: README.md  shell.dc.html
ecad-core/: Cargo.toml
ecad-core/examples/: autoroute.rs  export.rs  gerber.rs  m1.rs  m2.rs  poc_multiprobe.rs  svg_outline.rs
ecad-core/src/: command.rs  doc.rs  font.rs  geom.rs  id.rs  ir.rs  lib.rs  library.rs  part.rs  query.rs  schematic.rs  svg_import.rs  (+3 more)
ecad-gui/: Cargo.toml
ecad-gui/src/: app.rs  canvas.rs  chrome.rs  explorer.rs  findings.rs  fixtures.rs  harness.rs  highlight.rs  host.rs  inspector.rs  lib.rs  main.rs  panels.rs  panes.rs  registry.rs  reload.rs  schematic_view.rs  selection.rs  tool.rs
ecad-gui/src/app/: domain.rs  editing.rs  events.rs  libraries.rs  pane.rs  panels.rs
ecad-gui/src/app/events/: pointer.rs
ecad-gui/src/app/tests/: camera.rs  editing.rs  libraries.rs  menubar.rs  mod.rs  panes.rs  reload.rs  routing.rs  selection.rs  sidebar.rs  tools.rs
ecad-gui/src/canvas/: pick.rs  tests.rs
ecad-gui/src/chrome/: menubar.rs  status_bar.rs  toolbar.rs
ecad-gui/src/findings/: tests.rs
ecad-gui/src/fixtures/: editing.rs  findings.rs  mod.rs  routing.rs  selection.rs  tests.rs  viewer.rs
ecad-gui/src/highlight/: tests.rs
ecad-gui/src/host/: host.rs  wayland_color.rs
ecad-gui/src/host/host/: color.rs  gfx.rs  input.rs
ecad-gui/src/panels/: explorer.rs  findings.rs  layers.rs  properties.rs  sidebar.rs
ecad-gui/src/panes/: strip.rs
ecad-gui/src/schematic_view/: tests.rs
eutectic-core/: Cargo.toml
eutectic-core/examples/: autoroute.rs  export.rs  gerber.rs  m1.rs  m2.rs  m3.rs  poc_multiprobe.rs  schematic.rs  svg_outline.rs
eutectic-core/src/: autoroute.rs  command.rs  diagnostic.rs  doc.rs  elaborate.rs  font.rs  geom.rs  history.rs  id.rs  ir.rs  lib.rs  library.rs  part.rs  quantity.rs  schematic.rs  schematic_svg.rs  solve.rs  text.rs
eutectic-core/src/autoroute/: grid.rs
eutectic-core/src/elaborate/: builders.rs  expand.rs  query.rs  support.rs  tests.rs
eutectic-core/src/export/: netlist.rs  svg.rs  tests.rs
eutectic-core/src/geom/: feature.rs  geom_tests.rs  kernel.rs  shape.rs
eutectic-core/src/kicad/: symbol.rs
eutectic-core/src/part/: geometry.rs  library.rs  tests.rs
eutectic-core/src/route/: connect.rs  model.rs  pour_tests.rs  world.rs
eutectic-core/src/schematic/: features.rs  model.rs  reflow.rs  symbol.rs  tests.rs
eutectic-core/src/text/: directive.rs  emit.rs  tests.rs
eutectic-core/tests/: library_packages.rs  pipeline.rs  showcase.rs
eutectic-gui/: Cargo.toml
eutectic-gui/src/: app.rs  canvas.rs  chrome.rs  explorer.rs  findings.rs  harness.rs  highlight.rs  host.rs  inspector.rs  lib.rs  main.rs  open_dialog.rs  palette.rs  panels.rs  panes.rs  pick.rs  recents.rs  registry.rs  reload.rs  render.rs  schematic_pick.rs  schematic_view.rs  selection.rs  tool.rs
eutectic-gui/src/app/: autoroute.rs  board_pane.rs  canvas_pane.rs  domain.rs  editing.rs  events.rs  libraries.rs  open.rs  pane.rs  place.rs
eutectic-gui/src/app/board_pane/: tests.rs
eutectic-gui/src/app/canvas_pane/: tests.rs
eutectic-gui/src/app/events/: pointer.rs
eutectic-gui/src/app/tests/: autoroute.rs  camera.rs  chrome.rs  direct_manip.rs  editing.rs  libraries.rs  menubar.rs  mod.rs  open.rs  palette.rs  panes.rs  place.rs  reload.rs  routing.rs  schematic_pane.rs  selection.rs  sidebar.rs  snap.rs  tools.rs
eutectic-gui/src/canvas/: pick.rs  tests.rs
eutectic-gui/src/chrome/: actions.rs  dialogs.rs  icons.rs  menubar.rs  status_bar.rs  toolbar.rs
eutectic-gui/src/findings/: tests.rs
eutectic-gui/src/fixtures/: editing.rs  findings.rs  mod.rs  routing.rs  selection.rs  tests.rs  viewer.rs
eutectic-gui/src/highlight/: tests.rs
eutectic-gui/src/host/: LICENSE-MIT  host.rs  wayland_color.rs
eutectic-gui/src/host/host/: color.rs  gfx.rs  input.rs
eutectic-gui/src/panels/: explorer.rs  findings.rs  layers.rs  library_browser.rs  properties.rs  sidebar.rs
eutectic-gui/src/panes/: strip.rs
eutectic-gui/src/render/: board.rs  camera.rs  damage.rs  gpu.rs  instance.rs  scene.rs  schematic.rs  state.rs  style.rs  tess.rs  text.rs
eutectic-gui/src/render/board/: tests.rs
eutectic-gui/src/render/schematic/: tests.rs
eutectic-gui/src/render/shaders/: chrome.wgsl  composite.wgsl  cover.wgsl  text.wgsl
eutectic-gui/src/schematic_view/: tests.rs
eutectic-gui/tests/: pane_gpu.rs  render_goldens.rs
examples/: autoroute.rs  export.rs  gerber.rs  m1.rs  m2.rs  m3.rs  poc_multiprobe.rs  schematic.rs  showcase.eut
src/: annotate.rs  autoroute.rs  command.rs  coord.rs  diagnostic.rs  doc.rs  elaborate.rs  export.rs  expr.rs  font.rs  geom.rs  history.rs  id.rs  iface_infer.rs  ir.rs  kicad.rs  lib.rs  part.rs  project.rs  quantity.rs  query.rs  region.rs  route.rs  schematic.rs  schematic_svg.rs  solve.rs  svg_import.rs  text.rs  ttf.rs
tests/: pipeline.rs
(+64 files in other folders)
