[package]
name = "ecad-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
ecad-core = { path = "../ecad-core" }
damascene-core = { git = "https://github.com/computer-whisperer/damascene.git", rev = "eef1630a198c9c9160f6dc3568eecbc904d76e46" }
damascene-winit-wgpu = { git = "https://github.com/computer-whisperer/damascene.git", rev = "eef1630a198c9c9160f6dc3568eecbc904d76e46" }
