[package]
name = "ecad-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
ecad-core = { path = "../ecad-core" }
# Tracking damascene upstream main by rev pin (bump deliberately, keep the two
# revs identical). NOTE: this rev is AHEAD of the crates.io 0.4.6 release —
# "upgrading" to a crates.io version would move backward past text-metric
# changes the scene artifacts reflect. Keep the reference checkout at
# ecad/reference/damascene on the same rev.
damascene-core = { git = "https://github.com/computer-whisperer/damascene.git", rev = "eef1630a198c9c9160f6dc3568eecbc904d76e46" }
damascene-winit-wgpu = { git = "https://github.com/computer-whisperer/damascene.git", rev = "eef1630a198c9c9160f6dc3568eecbc904d76e46" }
