[package]
name = "eutectic-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
eutectic-core = { path = "../eutectic-core" }
# Tracking damascene upstream main by rev pin (bump deliberately, keep the two
# revs identical). NOTE: this rev is AHEAD of the crates.io 0.4.6 release —
# "upgrading" to a crates.io version would move backward past text-metric
# changes the scene artifacts reflect. Keep the reference checkout at
# ecad/reference/damascene on the same rev.
#
# damascene-winit-wgpu is deliberately NOT a dependency: the owned-canvas
# campaign's host slice copied it into `src/host/` (see the provenance header
# there) so the app runs through its own winit event loop. The direct winit /
# wgpu / host-glue dependencies below are pinned at exactly the versions
# upstream's damascene-winit-wgpu Cargo.toml pins at the same rev, so the
# dependency graph (and lockfile) stays identical to what the packaged host
# pulled in.
damascene-core = { git = "https://github.com/computer-whisperer/damascene.git", rev = "eef1630a198c9c9160f6dc3568eecbc904d76e46" }
damascene-wgpu = { git = "https://github.com/computer-whisperer/damascene.git", rev = "eef1630a198c9c9160f6dc3568eecbc904d76e46" }
# The MSDF annotation-text tier (renderer-spec §6, WP3) rasterizes glyphs
# through damascene-core's public `text::msdf{,_atlas}` machinery. The font is
# damascene's own Inter (same rev pin — annotation text matches the chrome's
# face); `ttf-parser` + `cosmic-text` are pinned at the versions damascene-core
# resolves so the `Face` / `fontdb::ID` types unify to the same crates.
damascene-fonts = { git = "https://github.com/computer-whisperer/damascene.git", rev = "eef1630a198c9c9160f6dc3568eecbc904d76e46", default-features = false, features = ["inter"] }
ttf-parser = { version = "0.25", default-features = false, features = ["std"] }
cosmic-text = "0.19"
# `bytemuck` casts the owned renderer's instance/vertex/uniform structs to GPU
# bytes (`src/render/`); `lyon_tessellation` is its polygon-with-holes
# triangulator (renderer-spec §3: earcut-class, CPU-side, unit-testable — lyon
# was the spec's default candidate; it handles hole rings via fill rules and
# has no renderer baggage, unlike full lyon / earcutr which lacks a fill-rule
# story for pre-oriented ring sets).
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
lyon_tessellation = "1"
pollster = "0.4"
rfd = { version = "0.17.2", default-features = false, features = ["xdg-portal"] }
wgpu = "29"
winit = { version = "0.30", features = ["android-native-activity"] }

[dev-dependencies]
# Golden-image encode/decode for the GPU render snapshots (gw-25) in
# `tests/render_goldens.rs`.
png = "0.17"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
# `arboard` backs the native clipboard bridge in the copied host; `open`
# shells out to xdg-open / `start` / `open` for `App::drain_link_opens`.
arboard = { version = "3", features = ["wayland-data-control"] }
open = "5"

[target.'cfg(target_os = "linux")'.dependencies]
# Side-channel client for `wp_color_management_v1` — see
# `src/host/wayland_color.rs`. Gated by the `wayland-color-management`
# feature, exactly as upstream gates it; versions track what winit already
# pulls in transitively.
wayland-backend = { version = "0.3", features = ["client_system"], optional = true }
wayland-client = { version = "0.31", optional = true }
wayland-protocols = { version = "0.32", features = ["client", "staging"], optional = true }
wayland-sys = { version = "0.31", features = ["client"], optional = true }
dlib = { version = "0.5", optional = true }
raw-window-handle = { version = "0.6", optional = true }

[features]
# Default-on to match the packaged damascene-winit-wgpu host this module
# replaced (its default features included wayland-color-management).
default = ["wayland-color-management"]
# Build the Wayland `wp_color_management_v1` driver in `src/host/`. On
# non-Linux targets this feature is a no-op (the deps are
# `cfg(target_os = "linux")`).
wayland-color-management = [
    "dep:wayland-backend",
    "dep:wayland-client",
    "dep:wayland-protocols",
    "dep:wayland-sys",
    "dep:dlib",
    "dep:raw-window-handle",
]
